# hal_nordic

./: .gitignore  CMakeLists.txt  CODEOWNERS  nrfx_config.h  nrfx_config_nrf51.h  nrfx_config_nrf52805.h  nrfx_config_nrf52810.h  nrfx_config_nrf52811.h  nrfx_config_nrf52820.h  nrfx_config_nrf52832.h  nrfx_config_nrf52833.h  nrfx_config_nrf52840.h  nrfx_config_nrf5340_application.h  nrfx_config_nrf5340_network.h  nrfx_config_nrf9160.h  nrfx_glue.c  nrfx_glue.h  nrfx_log.h
.github/workflows/: wifi-doc-check.yml
drivers/: CMakeLists.txt
drivers/nrf_802154/driver/: CMakeLists.txt
drivers/nrf_802154_serialization/: CMakeLists.txt
drivers/nrf_802154_serialization/include/: nrf_802154.h  nrf_802154_callouts.h  nrf_802154_config.h  nrf_802154_const.h  nrf_802154_serialization.h  nrf_802154_serialization_config.h  nrf_802154_serialization_error.h  nrf_802154_types.h
drivers/nrf_802154_sl_opensource/: CMakeLists.txt  nrf_802154_sl_files.cmake
drivers/nrf_radio_802154/: CMakeLists.txt  LICENSE  README.md  nrf_802154.c  nrf_802154.h  nrf_802154_config.h  nrf_802154_core.c  nrf_802154_critical_section.c  nrf_802154_debug.c  nrf_802154_driver_sources.cmake  nrf_802154_peripherals.h  nrf_802154_request_direct.c  nrf_802154_request_swi.c  nrf_802154_swi.c  nrf_802154_timer_coord.c  nrf_802154_types.h  nrf_802154_utils.h  nrf_error.h
drivers/nrf_wifi/: Doxyfile
eperipherals/app/: eperiphs_backend.h  eperiphs_common.h
ironside/: git_sha.txt
ironside/se/: git_sha.txt
ironside/se/src/: ironside_se_api.c  (+1 more)
nrfs/: CHANGELOG.md  CMakeLists.txt  README.md
nrfs/helpers/: CMakeLists.txt  dvfs_oppoint.c  dvfs_oppoint.h
nrfs/include/: nrfs_common.h
nrfs/include/internal/: nrfs_backend.h  nrfs_callbacks.h  nrfs_ctx.h  nrfs_dispatcher.h  nrfs_hdr.h  nrfs_phy.h
nrfs/include/internal/requests/: nrfs_audiopll_reqs.h  nrfs_clock_reqs.h  nrfs_diag_reqs.h  nrfs_dvfs_reqs.h  nrfs_gdfs_reqs.h  nrfs_gdpwr_reqs.h  nrfs_gswdt_reqs.h  nrfs_mram_reqs.h  nrfs_pmic_reqs.h  nrfs_reqs_common.h  nrfs_reset_reqs.h  nrfs_swext_reqs.h  nrfs_temp_reqs.h  nrfs_usb_reqs.h
nrfs/include/internal/services/: nrfs_audiopll.h  nrfs_clock.h  nrfs_diag.h  nrfs_dvfs.h  nrfs_gdfs.h  nrfs_gdpwr.h  nrfs_generic.h  nrfs_gswdt.h  nrfs_mram.h  nrfs_pmic.h  nrfs_reset.h  nrfs_swext.h  nrfs_temp.h  nrfs_usb.h
nrfs/include/services/: nrfs_audiopll.h  nrfs_clock.h  nrfs_diag.h  nrfs_dvfs.h  nrfs_gdfs.h  nrfs_gdpwr.h  nrfs_gswdt.h  nrfs_mram.h  nrfs_pmic.h  nrfs_reset.h  nrfs_swext.h  nrfs_temp.h  nrfs_usb.h
nrfs/src/: CMakeLists.txt
nrfs/src/internal/: nrfs_dispatcher.c
nrfs/src/services/: nrfs_audiopll.c  nrfs_clock.c  nrfs_diag.c  nrfs_dvfs.c  nrfs_gdfs.c  nrfs_gdpwr.c  nrfs_gswdt.c  nrfs_mram.c  nrfs_pmic.c  nrfs_reset.c  nrfs_swext.c  nrfs_temp.c  nrfs_usb.c
nrfx/: CHANGELOG.md  README
nrfx/doc/: drv_supp_matrix.dox  errata.dox  main_page.dox  nrfx.doxyfile  nrfx_4_0_migration_guide.md
nrfx/drivers/: nrfx_common.h  nrfx_errata.h  nrfx_errors.h  nrfx_utils.h  nrfx_utils_internal.h
nrfx/hal/: nrf_aar.h  nrf_auxpll.h  nrf_bicr.h  nrf_cache.h  nrf_ccm.h  nrf_clock.h  nrf_common.h  nrf_comp.h  nrf_cracen_cm.h  nrf_cracen_rng.h  nrf_ctrlap.h  nrf_dppi.h  nrf_ecb.h  nrf_egu.h  nrf_exmif.h  nrf_ficr.h  nrf_gpio.h  nrf_gpiohspadctrl.h  nrf_gpiote.h  nrf_grtc.h  nrf_hsfll.h  nrf_i2s.h  nrf_ipc.h  nrf_kmu.h  nrf_lfrc.h  nrf_lfxo.h  nrf_lpcomp.h  nrf_lrcconf.h  nrf_memconf.h  nrf_mramc.h  nrf_mutex.h  nrf_mvdma.h  nrf_nfct.h  nrf_nvmc.h  nrf_oscillators.h  nrf_pdm.h  nrf_power.h  nrf_ppi.h  nrf_ppib.h  nrf_qdec.h  (+21 more)
nrfx/haly/: nrfy_bellboard.h  nrfy_common.h  nrfy_comp.h  nrfy_dppi.h  nrfy_gpio.h  nrfy_gpiote.h  nrfy_grtc.h  nrfy_i2s.h  nrfy_lpcomp.h  nrfy_mramc.h  nrfy_mvdma.h  nrfy_nfct.h  nrfy_pdm.h  nrfy_pwm.h  nrfy_qdec.h  nrfy_rramc.h  nrfy_rtc.h  nrfy_saadc.h  nrfy_spim.h  nrfy_tbm.h  nrfy_temp.h  nrfy_timer.h  nrfy_twim.h  nrfy_uarte.h  nrfy_vpr.h  nrfy_wdt.h
nrfx/helpers/: nrf_cracen_cm_dma.h  nrf_vdma.h  nrfx_analog_common.h  nrfx_analog_comp_common.h  nrfx_analog_lpcomp_common.h  nrfx_analog_saadc_common.h  nrfx_flag32_allocator.c  nrfx_flag32_allocator.h  nrfx_gppi.h  nrfx_gppi_dppi.c  nrfx_gppi_dppi_ppib.c  nrfx_gppi_dppi_ppib_lumos.c  nrfx_gppi_ppi.c  nrfx_gppi_routes.h  nrfx_hsfll_trim.h  nrfx_ids.h  nrfx_memconf_trim.c  nrfx_memconf_trim.h  nrfx_ram_ctrl.c  nrfx_ram_ctrl.h  nrfx_reset_reason.h
nrfx/lib/: nrfx_coredep.h
nrfx/mdk/: compiler_abstraction.h  nrf.h  nrf51.h  nrf52.h  nrf52805.h  nrf52810.h  nrf52811.h  nrf52820.h  nrf52833.h  nrf52840.h  nrf5340_application.h  nrf5340_network.h  nrf54h20_application.h  nrf54h20_radiocore.h  nrf54l05_application.h  nrf54l10_application.h  nrf54l15_application.h  nrf54l15_application_peripherals.h  nrf54l15_enga_application_peripherals.h  nrf54l15_enga_flpr_peripherals.h  nrf54l15_flpr_peripherals.h  nrf54l_erratas.h  nrf54lm20a_enga_application.h  nrf54lv10a_enga_application.h  nrf54lv10a_enga_application.svd  nrf54lv10a_enga_application_peripherals.h  nrf54lv10a_enga_flpr.svd  nrf54lv10a_enga_flpr_peripherals.h  nrf54lv10a_enga_types.h  nrf54lv10a_enga_version.h  nrf7120_enga_application.h  nrf7120_enga_application_peripherals.h  nrf7120_enga_global.h  nrf7120_enga_interim.h  nrf7120_enga_lmac_peripherals.h  nrf7120_enga_wificore_peripherals.h  nrf9120.h  nrf9160.h  nrf9230_engb_application.h  nrf9230_engb_radiocore.h  (+4 more)
nrfx/samples/: CHANGELOG.md  README.md
nrfx/samples/src/nrfx_egu/: CMakeLists.txt  README.md  main.c  sample.yaml
nrfx/samples/src/nrfx_egu/boards/: nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.conf  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
nrfx/templates/: nrfx_config_common.h  nrfx_config_nrf52832.h  nrfx_config_nrf5340_application.h  nrfx_config_nrf54h20_enga_flpr.h  nrfx_config_nrf91.h  nrfx_glue.h
utils/: gen_offsets.py  generate.sh  module.yml.j2  update_blobs.py  update_wifi_fw.py
zephyr/: LICENSE.txt  module.yml
(+1032 files in other folders)
